mos-server/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mos-server-srv
  labels:
    app: mos-server
  namespace: default
spec:
  selector:
    app: mos-server
  ports:
    - name: http
      protocol: TCP
      port: 7080
      targetPort: 8080
  type: ClusterIP
